--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eco-brunch": ">= 1.0 < 1.8"
   },
   "scripts": {
-    "postinstall": "brunch build --optimize"
+    "postinstall": "brunch build --production"
     
   },
   "subdomain": "adrianleb-streamsearch",
